plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.6'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'com.diffplug.spotless' version '7.2.1'
    id 'org.asciidoctor.jvm.convert' version '4.0.5'
}

group = 'com.irum'
version = '0.0.1-SNAPSHOT'
description = 'come2us'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    asciidoctorExt
}

repositories {
    mavenCentral()
}

def querydslDirProperty = layout.buildDirectory.dir("generated/querydsl")
def snippetsDir = layout.buildDirectory.dir("generated-snippets")

sourceSets {
    main {
        java {
            //컴파일 시 생성된 Q-type을 소스 코드로 인식
            //문자열이나 File 대신 DirectoryProperty를 직접 전달
            srcDirs += [querydslDirProperty]
        }
    }
}

// Java 컴파일 태스크 설정
tasks.withType(JavaCompile) {
    // Q-type 생성 위치를 JavaCompile의 옵션으로 지정
    options.getGeneratedSourceOutputDirectory().set(querydslDirProperty)
}

// 'clean' 태스크 실행 시 Q-type 생성 디렉토리도 함께 삭제
clean {
    delete querydslDirProperty
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // JPA & DB
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2'

    //Spring Validation
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    //Spring Security & JWT
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

    //redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // QueryDSL
    implementation 'com.querydsl:querydsl-jpa::jakarta'
    annotationProcessor "com.querydsl:querydsl-apt::jakarta"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"


    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}
//Spring REST Docs & asciidoctor 설정
test {
    useJUnitPlatform()
    outputs.dir snippetsDir
}

asciidoctor.doFirst {
    delete layout.projectDirectory.dir("src/main/resources/static/docs")
}

asciidoctor {
    // 'snippets' 변수에 'snippetsDir' 경로(build/generated-snippets)를 주입
    attributes(
            'snippets': snippetsDir.get().asFile
    )
    configurations 'asciidoctorExt'
    dependsOn test
}

bootJar {
    if (project.hasProperty('docs')) {
        dependsOn asciidoctor
    }
    from("${asciidoctor.outputDir}/html5") {
        into 'static/docs'
    }
}


tasks.named('test') {
    useJUnitPlatform()
}

spotless {
    java {
        targetExclude("**/generated/querydsl/**")
        // Google Java 포맷 적용
        googleJavaFormat().aosp()
        // import 순서 정렬
        importOrder()
        // 사용하지 않는 import 제거
        removeUnusedImports()
        // 각 라인 끝에 있는 공백을 제거
        trimTrailingWhitespace()
        // 파일 끝에 새로운 라인 추가
        endWithNewline()
    }
}

tasks.register('updateGitHooks', Copy) {
    from('./scripts/') {
        include 'pre-commit'
    }
    into './.git/hooks'
}


tasks.register('makeGitHooksExecutable', Exec) {
    commandLine 'chmod', '+x', './.git/hooks/pre-commit'
    dependsOn updateGitHooks
}
